--- a/index.html
+++ b/index.html
@@ -258,6 +258,28 @@
         </section>
         <!-- ***** Welcome Area End ***** -->
 
+        <!-- ***** Contact Area Start ***** -->
+        <div class="contact-popup-form" id="contact-modal-lg">
+            <div class="modal fade contact-modal-lg" tabindex="-1" role="dialog" aria-labelledby="contact-modal-lg" aria-hidden="true">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="contact-heading-text text-center mb-30">
+                                        <span></span>
+                                        <h2>Please get in touch</h2>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- ***** Contact Area End ***** -->
+
+
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         <!-- <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p> -->
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
