fix: image title

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>01.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 彩りの微笑み</h2>
                             </div>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>02.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 空へ伸びる</h2>
                             </div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>03.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 古家の記憶</h2>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>04.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 朝ぼらけの泡沫</h2>
                             </div>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>05.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 待ち人</h2>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>06.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> この先</h2>
                             </div>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>07.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 気がかり</h2>
                             </div>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>08.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 扉の向こうへ</h2>
                             </div>
                         </div>
                     </div>
@@ -197,7 +197,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>09.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 翻弄</h2>
                             </div>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>10.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 春の香り</h2>
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>11.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 華を抱いて</h2>
                             </div>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>12.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 浮き足</h2>
                             </div>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
                         <div class="carousel-content h-100">
                             <div class="slide-text">
                                 <span>13.</span>
-                                <h2> Believe you can fly</h2>
+                                <h2> 苔生す扉</h2>
                             </div>
                         </div>
                     </div>
